# Tinic

./: .gitignore  Cargo.toml  LICENSE  readme.md
.github/workflows/: rust.yml
.zed/: debug.json  settings.json
crates/generics/: Cargo.toml
crates/generics/src/: constants.rs  error_handle.rs  lib.rs  retro_paths.rs  test_workdir.rs  types.rs
crates/libretro_sys/: Cargo.toml
crates/libretro_sys/src/: binding_log_interface.rs
crates/retro_audio/src/: audio_driver.rs  audio_resample.rs
crates/retro_av/: Cargo.toml  build.rs
crates/retro_av/src/: audio_driver.rs  audio_resample.rs  audios.rs  lib.rs  print_scree.rs  retro_av.rs  sync.rs  video.rs
crates/retro_av/src/retro_gl/: render.rs  texture.rs  window.rs
crates/retro_av/src/retro_vulkan/: window.rs
crates/retro_controllers/: Cargo.toml
crates/retro_controllers/src/: devices_manager.rs  keyboard.rs  lib.rs  state_thread.rs
crates/retro_controllers/src/gamepad/: mod.rs  retro_gamepad.rs  retro_gamepad_key_map.rs  update_gamepad_state_handle.rs
crates/retro_core/: Cargo.toml
crates/retro_core/src/: av_info.rs  graphic_api.rs  lib.rs  retro_core.rs  retro_perf.rs  system.rs
crates/retro_core/tests/: retro_core_test.rs
crates/retro_video/: readme.md
crates/retro_video/src/: lib.rs  print_scree.rs  retro_env_callback.rs  retro_window.rs  video.rs
crates/tinic/: Cargo.toml
crates/tinic/examples/: tinic_example.rs  tinic_pop_event.rs  tinic_ron_on_demand.rs  tinic_run.rs
crates/tinic/examples/common/: events.rs  mod.rs  setup.rs
crates/tinic/src/: app_dispatcher.rs  device_listener.rs  lib.rs  tinic.rs  tinic_app.rs  tinic_app_ctx.rs
crates/tinic/src/app/: listener.rs  mod.rs  tinic_app_ctx.rs  user_events.rs  window_events.rs
crates/tinic_database/: Cargo.toml  games.sqlite  readme.md
crates/tinic_database/src/: data_test.rs  lib.rs  model.rs  query.rs  sqlite_query.rs  sqlite_query_tools.rs  tinic_database_connection.rs
crates/tinic_ipc/: Cargo.toml
crates/tinic_ipc/src/: app_state.rs  constants.rs  device_listener.rs  game_loop.rs  lib.rs  main.rs
crates/tinic_ipc_protocol/: Cargo.toml
crates/tinic_ipc_protocol/src/: input.rs  out.rs
crates/tinic_super/: Cargo.toml  readme.md
crates/tinic_super/examples/: tinic_super_example.rs
crates/tinic_super/src/: core_info_helper.rs  download.rs  event.rs  extract_files.rs  lib.rs  tinic_super.rs
crates/tinic_super/src/art/: helper.rs  mod.rs  thumbnail.rs
crates/tinic_super/src/core_info/: download_core.rs  get_all_core_infos.rs  get_compatibility_core_infos.rs  has_core_installed.rs  helper.rs  install_core.rs  mod.rs  model.rs  read_file.rs  try_update_infos.rs
crates/tinic_super/src/cores/: download.rs  installed.rs  mod.rs
crates/tinic_super/src/database/: crc32.rs  game.rs  helper.rs  mod.rs  rdb.rs
crates/tinic_super/src/infos/: download.rs  get_all_core_infos.rs  get_compatibility_core_infos.rs  has_installed.rs  helper.rs  mod.rs  model.rs  read_file.rs
crates/tinic_super/src/rdb_manager/: crc32.rs  download.rs  game.rs  game_identifier.rs  game_model.rs  helper.rs  mod.rs  rdb.rs  rdb_parser.rs
crates/tinic_super/src/tools/: download.rs  extract_files.rs  game_identifier.rs  mod.rs
crates/tinic_super/tests/: tinic_super.rs
(+18 files in other folders)
