[workspace]
resolver = "2"
members = [
    'crates/retro_controllers',
    'crates/retro_core',
    "crates/retro_av",
    "crates/tinic",
    "crates/generics",
    "crates/libretro_sys",
    "crates/tinic_super",
]
default-members = ["crates/tinic"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
retro_core = { path = "crates/retro_core", features = [] }
retro_controllers = { path = "crates/retro_controllers" }
retro_av = { path = "crates/retro_av" }
libretro_sys = { path = "crates/libretro_sys" }
generics = { path = "crates/generics" }
tinic_super = { path = "crates/tinic_super" }
tokio = { version = "1.43.0", features = ["full"] }
reqwest = "0.12.12"
zip = "2.2.2"
sevenz-rust = "0.6.1"
gilrs = "0.11.0"
image = "0.25.5"
rodio = "0.20.1"
raw-cpuid = "11.3.0"
uuid = { features = ["v4"], version = "1.12.1" }
bindgen = "0.71.1"
libloading = "0.8.6"
cc = "1.2.10"
cfg_aliases = "0.2.1"
gl_generator = "0.14.0"
glutin = "0.32.2"
winit = "0.30.8"
raw-window-handle = "0.6.2"
glutin-winit = "0.5.0"
