[package]
name = "tinic"
version = "0.1.7"
edition = "2024"


[dependencies]
retro_core.workspace = true
retro_controllers.workspace = true
retro_video.workspace = true
retro_audio.workspace = true
libretro_sys.workspace = true
generics.workspace = true
winit.workspace = true
serde = { version = "1.0.228", features = ["derive"] }