[package]
name = "tinic_super"
version = "0.1.1"
edition = "2024"

[dependencies]
generics.workspace = true
reqwest.workspace = true
zip.workspace = true
sevenz-rust.workspace = true
futures-util = "0.3.31"
tokio = { version = "1.49.0", features = ["full"] }
rmp-serde = "1.1"
serde = { version = "1", features = ["derive"] }
rmpv = "1.3.1"
serde_bytes = "0.11.19"
crc32fast = "1.4.2"
rayon = "1.10"